gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      hostname: demo.utsabsapkota.xyz
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: demo.utsabsapkota.xyz
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: secure-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
    - name: nginx-gateway
  hostnames:
    - "demo.utsabsapkota.xyz"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nginx-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
